<?xml version="1.0"?>
<package format="2">
  <name>binary_filter</name>
  <version>0.0.0</version>
  <description>The binary_filter package</description>
  <maintainer email="amr_research@todo.todo">amr_research</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
