<?xml version="1.0"?>
<package format="2">
  <name>speed_filter_msgs</name>
  <version>0.0.0</version>
  <description>The speed_filter_msgs package</description>
  <maintainer email="amr_research@todo.todo">amr_research</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
